--- a/product-webapp-service/pom.xml
+++ b/product-webapp-service/pom.xml
@@ -4,22 +4,29 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.stackroute</groupId>
-		<artifactId>shop-smartly</artifactId>
+		<artifactId>ShopSmartly</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
-		<relativePath>../pom.xml</relativePath>  <!-- lookup parent from repository -->
+		<relativePath>../pom.xml</relativePath> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.stackroute</groupId>
-	<artifactId>seller-service</artifactId>
+	<artifactId>product-webapp-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>seller-service</name>
-	<description>Seller Service for Shop Smartly</description>
+	<name>product-webapp-service</name>
+	<description>Product Webapp Service for Shop Smartly</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
+		</dependency>
+
+		<!-- Add the below dependency for Spring Web MVC -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
 		<dependency>
