--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+server.port=8081
+spring.data.mongodb.database=OrderDatabase
+spring.data.mongodb.uri=mongodb://localhost:27017/
+server.error.include-message=always
