--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -11,8 +11,8 @@
 	<groupId>com.stackroute</groupId>
 	<artifactId>user-service</artifactId>
 	<version>1.0.0</version>
-	<name>authentication-service</name>
-	<description>Authentication Service for Shop Smartly</description>
+	<name>user-service</name>
+	<description>User Service for Shop Smartly</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
