--- a/authentication-service/src/main/resources/application.properties
+++ b/authentication-service/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+server.port=8084
+spring.datasource.url = jdbc:mysql://localhost:3306/authservice?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=root1234
 
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
+server.error.include-message=always
