--- a/authentication-service/src/main/resources/application.properties
+++ b/authentication-service/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8084
 spring.datasource.url = jdbc:mysql://localhost:3306/authservice?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=Root
+spring.datasource.password=8990mini
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
