--- a/payment-service/abc/src/main/resources/application.properties
+++ b/payment-service/abc/src/main/resources/application.properties
@@ -1,10 +1,12 @@
-Server.port=8082
-spring.datasource.name=Payment_Gateway
-spring.datasource.url=jdbc:mysql://localhost:3306/paymentDb
+# Set the server port
+server.port=8084
+
+# Data source configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/paymentDb?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=Prabhas@10032001
+spring.datasource.password=8990mini
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+# Hibernate configuration
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
-
-
