--- a/payment-service/src/main/resources/application.properties
+++ b/payment-service/src/main/resources/application.properties
@@ -1,10 +1,9 @@
-# Set the server port
 server.port=8084
 
 # Data source configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/paymentDb?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=8990mini
+spring.datasource.password=root1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate configuration
