--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,19 @@ services:
       - 15672:15672
       - 5672:5672
 
+services:
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.5.2
+    container_name: elasticsearch
+    environment:
+      - node.name=elasticsearch
+      - cluster.name=elasticsearch
+      - discovery.type=single-node
+      - bootstrap.memory_lock=true
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+    ports:
+      - 9200:9200
+      - 9300:9300
 #  mysqlservice:
 #    image: mysql:latest
 #    container_name: mysql-container
