--- a/product-webapp/webapp/package.json
+++ b/product-webapp/webapp/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^15.2.0",
     "@ng-bootstrap/ng-bootstrap": "^14.2.0",
     "@popperjs/core": "^2.11.6",
+    "angular-disable-browser-back-button": "^2.0.0",
     "bootstrap": "^5.2.3",
     "ngx-pagination": "^6.0.3",
     "rxjs": "~7.8.0",
