--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 server.port=8081
 spring.data.elasticsearch.cluster-names=product-service
 spring.data.elasticsearch.cluster-node=localhost:9200
-
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.serviceUrl.fetchRegistry=true
+eureka.client.serviceUrl.registerWithEureka=true
