--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.3"
+version: "2"
 services:
   rabbitmq:
     image: rabbitmq:3-management
@@ -20,52 +20,50 @@ services:
 #    ports:
 #      - 9200:9200
 #      - 9300:9300
-#  mysqlservice:
-#    image: mysql:latest
-#    container_name: mysql-container
-#    restart: always
-#    network_mode: "host"
-#    hostname: localhost
-#    ports:
-#      - 3306:3306
-#    environment:
-#      MYSQL_ROOT_PASSWORD: 'password'
-#      MYSQL_USERNAME: authuser
-#      MYSQL_PASSWORD: root
-#      MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
+  mysqlservice:
+    image: mysql:latest
+    container_name: mysql-container
+    hostname: localhost
+    ports:
+      - 3306:3306
+    environment:
+      MYSQL_DATABASE: authService
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_PASSWORD: root
+
+  mongodbservice:
+    image: mongo:latest
+    container_name: mongo-container
+    network_mode: host
+    hostname: localhost
+    ports:
+      - 27017:27017
 #
-#  mongodbservice:
-#    image: mongo:latest
-#    container_name: mongo-container
-#    network_mode: host
-#    hostname: localhost
-#    ports:
-#      - 27017:27017
-#
-#  elasticsearch:
-#    image: docker.elastic.co/elasticsearch/elasticsearch:7.5.2
-#    container_name: elasticsearch
-#    environment:
-#      - node.name=elasticsearch
-#      - cluster.name=elasticsearch
-#      - discovery.type=single-node
-#      - bootstrap.memory_lock=true
-#      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
-#    ports:
-#      - 9200:9200
-#      - 9300:9300
-#
-#
-#  user-service:
-#    container_name: user-authentication-management-service
-#    build: user-authentication-management-service/
-#    hostname: localhost
-#    network_mode: host
-#    ports:
-#      - 8090:8090
-#    depends_on:
-#      - mysqlservice
-#    restart: always
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.5.2
+    container_name: elasticsearch
+    environment:
+      - node.name=elasticsearch
+      - cluster.name=elasticsearch
+      - discovery.type=single-node
+      - bootstrap.memory_lock=true
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+    ports:
+      - 9200:9200
+      - 9300:9300
+
+
+  user-service:
+    container_name: user-service
+    build: user-service/
+    hostname: localhost
+    network_mode: host
+    ports:
+      - 8089:8089
+    depends_on:
+      - mongodbservice
+      - eureka-server
+    restart: always
 #
 #  email-service:
 #    container_name: email-service
@@ -76,25 +74,100 @@ services:
 #      - 8075:8075
 #    restart: always
 #
-#  eureka-server:
-#    build: eureka-server/
-#    container_name: eureka-server
-#    restart: always
-#    network_mode: "host"
-#    hostname: localhost
-#    ports:
-#      - 8761:8761
-#
-#  api-gateway:
-#    build: api-gateway/
-#    container_name: api-gateway
-#    depends_on:
-#      - eureka-server
-#    restart: always
-#    network_mode: "host"
-#    hostname: localhost
-#    ports:
-#      - 8080:8080
+  eureka-server:
+    build: eureka-server/
+    container_name: eureka-server
+    restart: always
+    network_mode: "host"
+    hostname: localhost
+    ports:
+      - 8761:8761
+
+  api-gateway:
+    build: api-gateway/
+    container_name: api-gateway
+    depends_on:
+      - eureka-server
+    restart: always
+    network_mode: "host"
+    hostname: localhost
+    ports:
+      - 8082:8082
+
+  authentication-service:
+    container_name: authentication-service
+    build: authentication-service/
+    hostname: localhost
+    network_mode: host
+    ports:
+      - 8084:8084
+    depends_on:
+      - mysqlservice
+      - eureka-server
+    restart: always
+
+  order-service:
+    container_name: order-service
+    build: order-service/
+    hostname: localhost
+    network_mode: host
+    ports:
+      - 8085:8085
+    depends_on:
+      - eureka-server
+      - mongodbservice
+    restart: always
+
+  payment-service:
+    container_name: payment-service
+    build: payment-service/
+    hostname: localhost
+    network_mode: host
+    ports:
+      - 8083:8083
+    depends_on:
+      - mysqlservice
+      - eureka-server
+    restart: always
+
+  product-service:
+    container_name: product-service
+    build:  product-service/
+    hostname: localhost
+    network_mode: host
+    ports:
+      - 8081:8081
+    depends_on:
+      - eureka-server
+      - elasticsearch
+    restart: always
+
+  review-service:
+    container_name: review-service
+    build: review-service/
+    hostname: localhost
+    network_mode: host
+    ports:
+      - 8086:8086
+    depends_on:
+      - eureka-server
+      - mongodbservice
+    restart: always
+
+  seller-service:
+    container_name: seller-service
+    build: seller-service/
+    hostname: localhost
+    network_mode: host
+    ports:
+      - 8087:8087
+    depends_on:
+      - eureka-server
+      - mongodbservice
+    restart: always
+
+
+
 
 
 
